--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EyeMvvm">
+        android:theme="@style/AppTheme">
         <activity android:name=".ui.splash.LandingActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
